# dynamic-self-improving-rust

./: Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  crates-io.yml  release.yml
crates/bamltype/: AGENTS.md  Cargo.toml
crates/bamltype-derive/: Cargo.toml
crates/bamltype/tests/: contract_bridge_ui_messages.rs
crates/dsir/: Cargo.toml
crates/dsir-lab-ui/: Cargo.toml
crates/dsir-lab-ui/src/: main.rs
crates/dsir-macros/: Cargo.toml
crates/dsir-macros/src/: lib.rs  runtime_path.rs
crates/dsir-registry/: Cargo.toml
crates/dsir-registry/src/: main.rs
crates/dsir/examples/: 01_predict.rs  02_cot.rs  03_react.rs  04_bootstrap.rs  05_lab.rs  06_graph.rs
crates/dsir/src/: augmentation.rs  lib.rs  persistence.rs
crates/dsir/src/adapter/: chat.rs
crates/dsir/src/core/: dyn_predictor.rs  dyn_signature.rs  mod.rs  module.rs  predicted.rs  schema.rs  settings.rs  signature.rs
crates/dsir/src/core/lm/: chat.rs  mod.rs
crates/dsir/src/evaluate/: feedback.rs  metrics.rs  mod.rs  runner.rs
crates/dsir/src/graph/: mod.rs  program_graph.rs  strategy.rs  structural.rs
crates/dsir/src/lab/: experiment.rs  mod.rs  registry.rs
crates/dsir/src/modules/: agent.rs  best_of_n.rs  chain_of_thought.rs  mod.rs  react.rs  refine.rs
crates/dsir/src/optimizer/: bootstrap.rs  copro.rs  dyn_compile.rs  gepa.rs  mipro.rs  mod.rs  propose.rs
crates/dsir/src/predictors/: dyn_predict.rs  dyn_strategies.rs  mod.rs  predict.rs
crates/dsir/src/trace/: mod.rs
crates/dsir/src/utils/: telemetry.rs
crates/dsir/tests/: dyn_lab.rs  optimizer_modules.rs
crates/psy-baml-ids/: Cargo.toml
crates/psy-baml-types/: Cargo.toml
crates/psy-bstd/: Cargo.toml
crates/psy-facet/: Cargo.toml
crates/psy-facet-core/: Cargo.toml
crates/psy-facet-core/src/: lib.rs
crates/psy-facet-macro-parse/: Cargo.toml
crates/psy-facet-macro-types/: Cargo.toml
crates/psy-facet-macros/: Cargo.toml
crates/psy-facet-macros-impl/: Cargo.toml  build.rs
crates/psy-facet-macros-impl/src/: lib.rs
crates/psy-facet-macros/src/: lib.rs
crates/psy-facet-path/: Cargo.toml
crates/psy-facet-path/src/: lib.rs
crates/psy-facet-reflect/: Cargo.toml
crates/psy-facet-reflect/src/: deferred_materialization.rs  lib.rs
crates/psy-facet/src/: lib.rs
crates/psy-internal-baml-diagnostics/: Cargo.toml
crates/psy-internal-baml-jinja/: Cargo.toml
crates/psy-jsonish/: Cargo.toml
docs/: ARCHITECTURE.md  GOALS.md  MODULES.md  README.md  ROADMAP.md  VENDOR.md
docs/internal/: ARCHITECTURE.md  GOALS.md  MODULES.md  ROADMAP.md  VENDOR.md  VENDOR_COMMIT.txt
docs/user/: index.md
docs/user/building-blocks/: adapter.md  constraints.md  dyn-signatures.md  language-models.md  modules.md  predictors.md  signature.md  strategies.md  types.md
docs/user/data/: dataloader.md  examples.md  prediction.md
docs/user/dynamic-programs/: persistence.md  program-graph.md  strategy-factory.md  structural-optimization.md
docs/user/evaluation/: metrics.md  running-evaluation.md
docs/user/getting-started/: quickstart.md
docs/user/guides/: examples.md  migrating-from-dsrs.md  tracing-and-debugging.md
docs/user/lab/: lab-ui.md  overview.md  registry.md  workflows.md
docs/user/optimizers/: bootstrap-few-shot.md  compile-dyn.md  copro.md  gepa-llm-judge.md  gepa.md  labeled-few-shot.md  miprov2.md  overview.md
docs/user/tutorials/: overview.md
