[package]
name = "bamltype-derive"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Attribute macro for facet-based BAML type generation (proc-macro crate)"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
exclude = [".git*", "docs/*", "tests/*", "benches/*", "*.md"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro-crate = "3.2"
convert_case = "0.6"
