[package]
name = "bamltype"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Facet-based BAML type generation"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
exclude = [".git*", "docs/*", "tests/*", "benches/*", "*.md"]

[dependencies]
# Facet for reflection (Psyborgs hard-fork — no upstream git pins)
facet = { package = "psy-facet", version = "0.1.1", path = "../psy-facet", default-features = false, features = ["std", "doc"] }
facet-reflect = { package = "psy-facet-reflect", version = "0.1.1", path = "../psy-facet-reflect", default-features = false, features = ["std"] }

# Hard-forked BAML crates (owned Psyborgs namespace)
anyhow = "1.0"
baml-types = { package = "psy-baml-types", version = "0.1.1", path = "../psy-baml-types" }
internal-baml-jinja = { package = "psy-internal-baml-jinja", version = "0.1.1", path = "../psy-internal-baml-jinja" }
jsonish = { package = "psy-jsonish", version = "0.1.1", path = "../psy-jsonish" }
minijinja = { version = "2.21.0", default-features = false, features = [
  "macros",
  "builtins",
  "debug",
  "preserve_order",
  "adjacent_loop_items",
  "unicode",
  "json",
  "unstable_machinery",
  "unstable_machinery_serde",
  "custom_syntax",
  "internal_debug",
  "deserialization",
  "serde",
] }

# Attribute macro (re-exported)
bamltype-derive = { version = "0.1.1", path = "../bamltype-derive" }

# Utils
indexmap = "2.1"
sha2 = "0.10.9"
thiserror = "2.0"

[features]
default = ["derive"]
derive = []

[dev-dependencies]
trybuild = "1.0.96"
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
expect-test = "1.5.0"
proptest = "1.5.0"
serde = { version = "1", features = ["alloc", "derive", "rc"] }
