[package]
name = "dsir-macros"
version = "0.1.0"
edition = "2024"
authors = ["dsir contributors"]
description = "Derive macros for dsir"
readme = "../../README.md"
documentation = "https://docs.rs/dsir-macros"
homepage = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
license = "Apache-2.0"

[lib]
name = "dsir_macros"
proc-macro = true

[dependencies]
syn   = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3.2"
serde_json = { version = "1.0.143", features = ["preserve_order"] }
minijinja = { version = "2.21.0", default-features = false, features = ["serde"] }

[dev-dependencies]
trybuild = "1.0.110"
