[package]
name = "dsir"
authors = ["dsir contributors"]
version = "0.1.0"
edition = "2024"
description = "DSPy-shaped library for programming language models in Rust."
readme = "../../README.md"
documentation = "https://docs.rs/dsir"
homepage = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
license = "Apache-2.0"
exclude = [
    "docs/*",
]

[dependencies]
futures = "0.3.31"
indexmap = "2.10.0"
rayon = "1.10.0"
rstest = "0.25.0"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] } 
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.83"
anyhow = "1.0.99"
bon = "3.7.0"
bamltype = { path = "../bamltype" }
# Keep this direct pin in sync with workspace [patch.crates-io] for self-sufficient external path consumers.
facet = { git = "https://github.com/darinkishore/facet", rev = "cc8613c97cd1ec03e63659db34a947989b45c8a5", default-features = false, features = ["std"] }
thiserror = "2.0.17"
dsir_macros = { version = "0.1.0", package = "dsir-macros", path = "../dsir-macros" }
csv = { version = "1.3.1" }
hf-hub = { version = "0.4.3", features = ["tokio"] }
parquet = { version = "56.1.0" }
arrow = { version = "56.1.0" }
regex = "1.11.2"
reqwest = { version = "0.13", features = ["blocking"] }
kdam = "0.6.3"
rand = "0.8.5"
foyer = { version = "0.20.0", features = ["serde"]}
tempfile = "3.23.0"
rig-core = { git = "https://github.com/0xPlaygrounds/rig", rev="aee3b8bf6576ce41c9ac1dd82520752a65fa0127" }
enum_dispatch = "0.3.13"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
minijinja = { git = "https://github.com/boundaryml/minijinja.git", branch = "main", default-features = false, features = ["builtins", "serde"] }

[package.metadata.cargo-machete]
ignored = ["rig-core"]

[features]
default = []

[dev-dependencies]
temp-env = { version = "0.3.6", features = ["async_closure"] }
