[package]
autotests = false
autobenches = false
edition = "2021"
name = "psy-baml-ids"
version = "0.1.0"
license = "Apache-2.0"
description = "Typesafe IDs for BAML backends and runtime (Psyborgs hard-fork)"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
exclude = [".git*", "docs/*", "tests/*", "benches/*", "*.md"]

[lib]
test = false
doctest = false
name = "baml_ids"

[package.metadata.rustflags]
RSTEST_TIMEOUT = "10"

[lints.rust]
dead_code = "deny"
mismatched_lifetime_syntaxes = "deny"
unused_imports = "deny"
unused_variables = "deny"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["alloc", "derive", "rc"] }
time = { version = "0.3.36", features = ["formatting"] }
type-safe-id = "=0.3.2"
uuid = { version = "1.8.0", features = ["v4", "v7", "serde", "js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
