[package]
autotests = false
autobenches = false
edition = "2021"
name = "psy-baml-types"
version = "0.1.1"
license = "Apache-2.0"
description = "BAML type system and IR (Psyborgs hard-fork)"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
exclude = [".git*", "docs/*", "tests/*", "benches/*", "*.md"]

[lib]
test = false
doctest = false
name = "baml_types"

[lints.rust]
dead_code = "deny"
mismatched_lifetime_syntaxes = "deny"
unused_imports = "deny"
unused_variables = "deny"

[lints.clippy]
type_complexity = "allow"

# Attention:
#   Please try to keep this crate low-dependency! We want to keep this as minimal as possible.
[dependencies]
anyhow = "1.0"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
internal-baml-diagnostics = { package = "psy-internal-baml-diagnostics", version = "0.1.1", path = "../psy-internal-baml-diagnostics" }
itertools = "0.14.0"
minijinja = { version = "2.21.0", default-features = false, features = [
  "macros",
  "builtins",
  "debug",
  "preserve_order",
  "adjacent_loop_items",
  "unicode",
  "json",
  "unstable_machinery",
  "unstable_machinery_serde",
  "custom_syntax",
  "internal_debug",
  "deserialization",
  "serde",
] }
pretty = "0.12.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
strum = { version = "0.26.2", features = ["derive"] }
web-time = "1.1.0"
baml-ids = { package = "psy-baml-ids", version = "0.1.1", path = "../psy-baml-ids" }

[dependencies.indexmap]
version = "2.1.0"
features = ["serde"]
optional = true

[features]
default = ["stable_sort"]
stable_sort = ["indexmap"]
