[package]
autotests = false
autobenches = false
name = "psy-facet-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Core reflection traits and types for the facet ecosystem (Psyborgs hard-fork)"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
exclude = [".git*", "docs/*", "tests/*", "benches/*", "*.md"]

[lib]
test = false
doctest = false
name = "facet_core"

[features]
auto-traits = []
default = ["std"]
std = ["alloc", "iddqd?/std"]
alloc = []
nonzero = []
net = []
camino = ["dep:camino", "alloc"]
ordered-float = ["dep:ordered-float"]
uuid = ["alloc", "dep:uuid"]
ulid = ["alloc", "dep:ulid"]
time = ["alloc", "dep:time"]
chrono = ["alloc", "dep:chrono", "chrono/clock"]
url = ["alloc", "dep:url"]
jiff02 = ["alloc", "dep:jiff"]
bytes = ["alloc", "dep:bytes"]
bytestring = ["alloc", "dep:bytestring"]
compact_str = ["alloc", "dep:compact_str"]
num-complex = ["dep:num-complex"]
smartstring = ["alloc", "dep:smartstring"]
smol_str = ["alloc", "dep:smol_str"]
ruint = ["alloc", "dep:ruint", "ruint?/alloc"]
indexmap = ["alloc", "dep:indexmap"]
rust_decimal = ["alloc", "dep:rust_decimal"]
lock_api = ["alloc", "dep:lock_api"]
iddqd = ["alloc", "dep:iddqd"]
yoke = ["alloc", "dep:yoke", "dep:stable_deref_trait"]
tendril = ["alloc", "dep:tendril"]
smallvec = ["alloc", "dep:smallvec"]
tuples-12 = []
fn-ptr = []
simd = []

[build-dependencies]
autocfg = "1.5.0"

[dependencies]
const-fnv1a-hash = "1"
bytes = { version = "1.11.0", default-features = false, optional = true }
bytestring = { version = "1.4.0", default-features = false, optional = true }
camino = { version = "1.2.1", optional = true }
compact_str = { version = "0.9.0", default-features = false, optional = true }
chrono = { version = "0.4.42", default-features = false, features = ["alloc"], optional = true }
impls = { version = "1" }
indexmap = { version = "2.12.1", default-features = false, optional = true }
jiff = { version = "0.2.16", optional = true }
num-complex = { version = "0.4.6", optional = true, default-features = false }
ordered-float = { version = "5.0.0", optional = true, default-features = false }
ruint = { version = "1.17.0", optional = true, default-features = false }
time = { version = "0.3.44", optional = true, features = ["macros"] }
ulid = { version = "1.2.1", optional = true }
smartstring = { version = "1.0.1", default-features = false, optional = true }
smol_str = { version = "0.3.4", default-features = false, optional = true }
url = { version = "2.5.4", optional = true, default-features = false }
uuid = { version = "1.19.0", optional = true }
rust_decimal = { version = "1.38.0", default-features = false, features = ["std"], optional = true }
lock_api = { version = "0.4", optional = true, default-features = false }
iddqd = { version = "0.3", default-features = false, optional = true }
yoke = { version = "0.8.1", optional = true }
tendril = { version = "0.5.0", optional = true }
stable_deref_trait = { version = "1.2.1", optional = true }
smallvec = { version = "1.15", default-features = false, optional = true }
