[package]
autotests = false
autobenches = false
name = "psy-facet-macro-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Unsynn grammar and type definitions for facet macro ecosystem (Psyborgs hard-fork)"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
exclude = [".git*", "docs/*", "tests/*", "benches/*", "*.md"]

[lib]
test = false
doctest = false
name = "facet_macro_types"

[dependencies]
proc-macro2 = "1"
quote = "1"
unsynn = "0.3.0"
