[package]
autotests = false
autobenches = false
name = "psy-facet-macros-impl"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Implementation of facet derive macros (Psyborgs hard-fork)"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
exclude = [".git*", "docs/*", "tests/*", "benches/*", "*.md"]

[lib]
test = false
doctest = false
name = "facet_macros_impl"

[features]
default = ["helpful-derive"]
slow-tests = []
ci = ["slow-tests"]
function = []
doc = []
helpful-derive = ["dep:strsim"]

[dependencies]
facet-macro-parse = { package = "psy-facet-macro-parse", version = "0.1.0", path = "../psy-facet-macro-parse" }
facet-macro-types = { package = "psy-facet-macro-types", version = "0.1.0", path = "../psy-facet-macro-types" }
proc-macro2 = "1.0.95"
quote = "1"
strsim = { version = "0.11", optional = true }
unsynn = "0.3.0"
