[package]
autotests = false
autobenches = false
name = "psy-facet-reflect"
version = "0.1.1"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Build and manipulate Facet values at runtime (Psyborgs hard-fork)"
repository = "https://github.com/Psyborgs-git/dynamic-self-improving-rust"
exclude = [".git*", "docs/*", "tests/*", "benches/*", "*.md"]

[lib]
test = false
doctest = false
name = "facet_reflect"

[features]
default = ["std", "regex"]
std = ["alloc", "facet-core/std", "facet-path/std"]
alloc = ["facet-core/alloc", "facet-path/alloc"]
tracing = ["dep:tracing"]
regex = ["dep:regex"]
slow-tests = []
ci = ["slow-tests"]
fuzz-tests = []
camino = ["alloc", "dep:camino", "facet-core/camino"]
uuid = ["alloc", "dep:uuid", "facet-core/uuid"]
ulid = ["alloc", "dep:ulid", "facet-core/ulid"]
time = ["facet-core/time"]
jiff02 = ["facet-core/jiff02"]
fn-ptr = ["facet-core/fn-ptr"]

[dependencies]
camino = { version = "1.2.1", optional = true }
facet-core = { package = "psy-facet-core", version = "0.1.1", path = "../psy-facet-core", default-features = false }
facet-path = { package = "psy-facet-path", version = "0.1.1", path = "../psy-facet-path", default-features = false }
hashbrown = "0.16"
smallvec = "2.0.0-alpha.12"
regex = { version = "1", default-features = false, features = ["std"], optional = true }
tracing = { version = "0.1.43", default-features = false, features = ["std"], optional = true }
ulid = { version = "1.2.1", optional = true }
uuid = { version = "1.19.0", optional = true }
